--- a/iKAZfront/src/main/webapp/assets/css/style.css
+++ b/iKAZfront/src/main/webapp/assets/css/style.css
@@ -27,18 +27,19 @@ img{max-width:100%;}
 }
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	background: #FFF;
+	background: aliceblue;
 }
 .wrap {
-	width:80%;
+	width:90%;
 	margin: 0 auto;
 }
 .header {
-	background: #FFF;
+	background: aliceblue;
 }
 .headertop_desc{
 	padding:20px 0;
 	border-bottom:1px solid #EEE;
+	background-color: aliceblue;
 }
 .call{
 	float:left;
@@ -78,6 +79,7 @@ body {
 }
 .header_top {
 	padding: 20px 0;
+	background-color: aliceblue;
 }
 .logo {
 	float: left;
@@ -198,8 +200,8 @@ body {
 }
 .search_box {
 	float: right;
-	border: 1px solid #3C3C3C;
-	background: #FFF;
+	border: 1px solid aliceblue;
+	background: transparent;
 	border-radius: 0.3em;
 	-webkit-border-radius: 0.3em;
 	-moz-border-radius: 0.3em;
@@ -270,7 +272,7 @@ body {
 /***** Content *****/
 .content {
 	padding: 20px 0;
-	background: #FFF;
+	background: aliceblue;
 }
 .content h2 {
 	color: #383838;
@@ -392,7 +394,7 @@ body {
 /*** Footer ***/
 .footer {
 	position: relative;
-	background: #FCFCFC;
+	background: aliceblue;
     border-top: 1px solid #CECECE;
     margin:20px auto;
 }
